--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     			    					</div>
     			    				</div>
     			    			</div>
-    			    			<input type="submit" value="Register" class="btn btn-info btn-block" onclick="validate()">
-                    <input type="reset" name="reset" value="Reset" class="btn btn-info btn-block" onclick="">
+    			    			<input type="button" value="Validate" class="btn btn-info" onclick="validate()">
+                    <input type="reset" name="reset" value="Reset" class="btn btn-info" onclick="">
+                    <input type="submit" value="Register" class="btn btn-info">
     			    		</form>
     			    	</div>
     	    		</div>
