--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       			    			<div class="row">
       			    				<div class="col-xs-6 col-sm-6 col-md-6">
       			    					<div class="form-group">
-      			                <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
+      			                <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name *">
                             <span id="alert-first_name" class="text-danger font-weight-bold"> </span>
       			    					</div>
       			    				</div>
@@ -34,7 +34,7 @@
     			    			</div>
 
     			    			<div class="form-group inputbox">
-    			    				<input type="text" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+    			    				<input type="text" name="email" id="email" class="form-control input-sm" placeholder="Email Address *">
                       <span id="alert-email" class="text-danger font-weight-bold"> </span>
                     </div>
 
@@ -42,19 +42,19 @@
     			    			<div class="row">
     			    				<div class="col-xs-6 col-sm-6 col-md-6">
     			    					<div class="form-group inputbox">
-    			    						<input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+    			    						<input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password *">
                           <span id="alert-pwd" class="text-danger font-weight-bold"> </span>
     			    					</div>
     			    				</div>
     			    				<div class="col-xs-6 col-sm-6 col-md-6">
     			    					<div class="form-group inputbox">
-    			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+    			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password *">
                           <span id="alert-pwd_cnf" class="text-danger font-weight-bold"> </span>
     			    					</div>
     			    				</div>
     			    			</div>
     			    			<input type="button" value="Validate" class="btn btn-info" onclick="validate()">
-                    <input type="reset" name="reset" value="Reset" class="btn btn-info" onclick="">
+                    <input type="reset" name="reset" value="Reset" class="btn btn-info" onclick="reset_errors()">
                     <input type="submit" value="Register" class="btn btn-info">
     			    		</form>
     			    	</div>
