--- a/index.html
+++ b/index.html
@@ -1,59 +1,62 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="form.css">
-    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="validate.js"> </script>
-
-    <title> Registration Form</title>
+    <title>Registration Page</title>
   </head>
-  <body>
-    <div class="container">
-            <div class="row centered-form">
-              <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-              	<div class="panel panel-default">
-              		<div class="panel-heading">
-      			    		<h3 class="panel-title">Flipkart Alert <small>It's free!</small></h3>
-      			 			</div>
-      			 			<div class="panel-body">
-      			    		<form role="form">
-      			    			<div class="row">
-      			    				<div class="col-xs-6 col-sm-6 col-md-6">
-      			    					<div class="form-group">
-      			                <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name *">
-                            <span id="alert-first_name" class="text-danger font-weight-bold"> </span>
-      			    					</div>
-      			    				</div>
-      			    				<div class="col-xs-6 col-sm-6 col-md-6">
-      			    					<div class="form-group">
-      			    						<input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
-                          </div>
-      			    				</div>
-    			    			</div>
+  <body onload="populate()">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="validate.js">
 
-    			    			<div class="form-group inputbox">
-    			    				<input type="text" name="email" id="email" class="form-control input-sm" placeholder="Email Address *">
-                      <span id="alert-email" class="text-danger font-weight-bold"> </span>
+    </script>
+    <div class="">
+      <div class="">
+        <div class="">
+              	<div class="">
+                  <div class="">
+      			    		<h3 class="">Flipkart Alert <small>It's free!</small></h3>
+      			 			</div>
+      			 			<div class="">
+      			    		<form action="http://localhost:5000/register" method="post" onsubmit="return validate()">
+                      <div class="form-group inputbox">
+                        <select name="products" class="width" id="pid" onchange="fillprice()">
+                        <option value="">Choose Product</option>
+                      </select>
+                      <span id="alert-pid" class=""> </span>
+                      <!-- <button type="button"  onclick="populate()" name="refesh">refresh</button> -->
+                      </div>
+                      <div class="price_details flex ">
+                        <div class="">
+        			    				<p id="latest_price" class="form-control input-sm">Latest Price</p>
+                          <span id="alert-email" class=""> </span>
+                        </div>
+                        <div class="">
+        			    				<p  id="highest_price" class="form-control input-sm">Highest Price</p>
+                          <span id="alert-email" class=""> </span>
+                        </div>
+                        <div class="">
+        			    				<p id="lowest_price" class="form-control input-sm" >Lowest Price </p>
+                          <span id="alert-email" class=""> </span>
+                        </div>
+                      </div>
+                      <div class="form-group inputbox">
+      			    				<input type="text" name="email" id="email" class="form-control input-sm" placeholder="Email Address *">
+                        <span id="alert-email" class=""> </span>
+                      </div>
+
                     </div>
 
-
-    			    			<div class="row">
-    			    				<div class="col-xs-6 col-sm-6 col-md-6">
-    			    					<div class="form-group inputbox">
-    			    						<input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password *">
-                          <span id="alert-pwd" class="text-danger font-weight-bold"> </span>
-    			    					</div>
-    			    				</div>
-    			    				<div class="col-xs-6 col-sm-6 col-md-6">
-    			    					<div class="form-group inputbox">
-    			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password *">
-                          <span id="alert-pwd_cnf" class="text-danger font-weight-bold"> </span>
-    			    					</div>
-    			    				</div>
-    			    			</div>
-    			    			<input type="button" value="Validate" class="btn btn-info" onclick="validate()">
+                    <div class="form-group inputbox">
+    			    				<input type="number" name="threshold" id="threshold" class="form-control input-sm" placeholder="Threshold *">
+                      <span id="alert-threshold" class=""> </span>
+                    </div>
                     <input type="reset" name="reset" value="Reset" class="btn btn-info" onclick="reset_errors()">
                     <input type="submit" value="Register" class="btn btn-info">
     			    		</form>
